<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >
        
        <Button
            android:id="@+id/current_site"
            style="@style/MainButton"
            android:onClick="onClickButton"
            android:text="@string/current_site" />

        <Button
            android:id="@+id/main_attractions_btn"
            style="@style/MainButton"
            android:onClick="onClickButton"
            android:text="@string/attractions_title" />

        <Button
            android:id="@+id/main_route_btn"
            style="@style/MainButton"
            android:onClick="onClickButton"
            android:text="@string/route_title" />

        <Button
            android:id="@+id/main_travellog_btn"
            style="@style/MainButton"
            android:onClick="onClickButton"
            android:text="@string/travellog_title" />

        <Button
            android:id="@+id/main_favorites_btn"
            style="@style/MainButton"
            android:onClick="onClickButton"
            android:text="@string/favorites_title" />

        <Button
            android:id="@+id/main_about_btn"
            style="@style/MainButton"
            android:onClick="onClickButton"
            android:text="@string/about_title" />
    </LinearLayout>

</FrameLayout>